# Futurella

./: CMakeLists.txt  LICENSE  README.md  _configure.bat  _open-project.bat  _start-cmake-gui.bat
cmake/: FindBullet.cmake  FindCEGUI.cmake  FindFMOD.cmake
meta/GUI grafiken/: readme.pptx
meta/GUI grafiken/final/: background.xcf  buttonv2.xcf
meta/Ideen/: Distant rendering and lightmaps.pptx  Performance tuning.txt  Präsi.txt  Spielablauf.txt  Todo.txt
src/: Asteroid.cpp  Asteroid.h  AsteroidField.cpp  AsteroidField.h  CEGUIDrawable.cpp  CEGUIDrawable.h  ChaseCam.cpp  ChaseCam.h  GUIApplication.cpp  GUIApplication.h  LargeScaleCoords.cpp  LargeScaleCoords.h  Level.cpp  Level.h  Node.cpp  Node.h  NodeCallbackService.cpp  NodeCallbackService.h  ResourceManager.cpp  ResourceManager.h  ShaderWrapper.cpp  ShaderWrapper.h  SpaceShip.cpp  SpaceShip.h  UserInputFeature.cpp  UserInputFeature.h  gl_40.c  gl_40.h  glincludes.cpp  glincludes.h  magnumdefs.h  main.cpp  old_glincludes.cpp
src/gameclient/: AsteroidFieldChunkClient.cpp  AsteroidFieldChunkClient.h  AsteroidFieldClient.cpp  AsteroidFieldClient.h  GameInfoClient.cpp  GameInfoClient.h  GameInstanceClient.cpp  GameInstanceClient.h  LevelDrawable.cpp  LevelDrawable.h  PlanetarySystemClient.cpp  PlanetarySystemClient.h  SpaceShipClient.cpp  SpaceShipClient.h
src/gamecommon/: GameMessagePeer.cpp  GameMessagePeer.h  GameObject.cpp  GameObject.h  PhysicsEngine.cpp  PhysicsEngine.h  ShipPhysicsActor.cpp  ShipPhysicsActor.h
src/gameserver/: AsteroidFieldChunkServer.cpp  AsteroidFieldChunkServer.h  AsteroidFieldServer.cpp  AsteroidFieldServer.h  GameInfoServer.cpp  GameInfoServer.h  GameInstanceServer.cpp  GameInstanceServer.h  PlanetarySystemServer.cpp  PlanetarySystemServer.h  SpaceShipServer.cpp  SpaceShipServer.h
src/networking/: messages.cpp  messages.h  networking.cpp  networking.h  peermanager.cpp  peermanager.h  sigslot.h
src/shader/: sky.vs
